objects/Account_Plan__c.object
<CustomObject>
    <description>Account Plan is a custom object used to record and manage Account Plans that are part of the client strategy process for selling large group customers.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the Account Plan.</description>
        <inlineHelpText>The status of the Account Plan.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>Relationships</fullName>
                </value>
                <value>
                    <fullName>Objectives</fullName>
                </value>
                <value>
                    <fullName>Observations</fullName>
                </value>
                <value>
                    <fullName>Strategic Opportunities</fullName>
                </value>
                <value>
                    <fullName>Plan of Action</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                    <isActive>false</isActive>
                    <label>Resources</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Action_Plans__c</fullName>
        <label>Total Action Plans</label>
        <summaryForeignKey>Action_Plan__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Benefit_Objectives__c</fullName>
        <label>Total Benefit Objectives</label>
        <summaryFilterItems>
            <field>AccountObjective__c.Type__c</field>
            <operation>notEqual</operation>
            <value>Corporate, Workforce, Total Rewards</value>
        </summaryFilterItems>
        <summaryForeignKey>AccountObjective__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_SWTs__c</fullName>
        <label>Total SWTs</label>
        <summaryForeignKey>AccountObservation__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Universal_Objectives__c</fullName>
        <label>Total Universal Objectives</label>
        <summaryFilterItems>
            <field>AccountObjective__c.Type__c</field>
            <operation>equals</operation>
            <value>Corporate, Workforce, Total Rewards</value>
        </summaryFilterItems>
        <summaryForeignKey>AccountObjective__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Account Plans</label>
    </listViews>
    <nameField>
        <displayFormat>CSP-{0000000}</displayFormat>
        <label>Account Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>